replace `tidytable::mutate` by `tidyft::mutate`

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -35,6 +35,7 @@ Imports:
     stringi (>= 1.7.12),
     tidytable (>= 0.10.1),
     tidyfst (>= 1.7.6),
+    tidyft (>= 0.5.7),
     utils,
     yaml (>= 2.3.7)
 Suggests: 
