--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -28,6 +28,7 @@ Imports:
     MsCoreUtils (>= 1.12.0),
     parallelly (>= 1.36.0),
     pbmcapply (>= 1.5.1),
+    R.utils (>= 2.12.2),
     rotl (>= 3.1.0),
     Spectra (>= 1.10.1),
     stats,
