--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -94,6 +94,8 @@ Collate:
     'export_spectra.R'
     'export_spectra_2.R'
     'extract_spectra.R'
+    'fake_annotations_columns.R'
+    'fake_sop_columns.R'
     'get_file.R'
     'get_example_sirius.R'
     'get_gnps_tables.R'
@@ -106,8 +108,10 @@ Collate:
     'globals.R'
     'harmonize_names_sirius.R'
     'harmonize_spectra.R'
+    'load_yaml_files.R'
     'log_debug.R'
     'pre_harmonize_names_sirius.R'
+    'select_annotations_columns.R'
     'prepare_annotations_gnps.R'
     'prepare_annotations_sirius.R'
     'prepare_annotations_spectra.R'
@@ -124,6 +128,7 @@ Collate:
     'prepare_params.R'
     'prepare_taxa.R'
     'replace_id.R'
+    'select_sop_columns.R'
     'weight_chemo.R'
     'weight_bio.R'
     'weight_annotations.R'
