--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,8 @@ export(export_params)
 export(export_spectra)
 export(export_spectra_2)
 export(extract_spectra)
+export(fake_annotations_columns)
+export(fake_sop_columns)
 export(get_example_sirius)
 export(get_file)
 export(get_gnps_tables)
@@ -33,6 +35,7 @@ export(harmonize_names_sirius)
 export(harmonize_spectra)
 export(import_spectra)
 export(keep_peaks)
+export(load_yaml_files)
 export(log_debug)
 export(log_pipe)
 export(normalize_peaks)
@@ -58,6 +61,8 @@ export(remove_above_precursor)
 export(replace_id)
 export(round_reals)
 export(sanitize_spectra)
+export(select_annotations_columns)
+export(select_sop_columns)
 export(split_tables_sop)
 export(weight_annotations)
 export(weight_bio)
