--- a/.github/linters/.mega-linter.yml
+++ b/.github/linters/.mega-linter.yml
@@ -8,6 +8,7 @@ DISABLE_ERRORS_LINTERS:
   - REPOSITORY_GITLEAKS
   - REPOSITORY_KICS
   - REPOSITORY_TRIVY
+DISABLE_LINTERS:
   - SPELL_CSPELL
 MARKDOWN_FILTER_REGEX_EXCLUDE: '(LICENSE\.md|NEWS\.md)'
 MARKDOWN_MARKDOWN_LINK_CHECK_DISABLE_ERRORS: true
