--- a/NAMESPACE
+++ b/NAMESPACE
@@ -62,6 +62,8 @@ export(replace_id)
 export(round_reals)
 export(sanitize_spectra)
 export(select_annotations_columns)
+export(select_sirius_columns)
+export(select_sirius_columns_2)
 export(select_sop_columns)
 export(split_tables_sop)
 export(weight_annotations)
