--- a/.github/linters/.mega-linter.yml
+++ b/.github/linters/.mega-linter.yml
@@ -9,7 +9,7 @@ DISABLE_ERRORS_LINTERS:
   - REPOSITORY_KICS
   - REPOSITORY_TRIVY
 DISABLE_LINTERS:
-  - SPELL_CSPELL
+  - SPELL
 MARKDOWN_FILTER_REGEX_EXCLUDE: '(LICENSE\.md|NEWS\.md)'
 MARKDOWN_MARKDOWN_LINK_CHECK_DISABLE_ERRORS: true
 PRE_COMMANDS:
