--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,13 +21,14 @@ Imports:
     docopt (>= 0.7.1),
     dplyr (>= 1.1.2),
     httr (>= 1.4.6),
+    future (>= 1.33.0),
+    future.apply (>= 1.11.0),
     igraph (>= 1.5.0.1),
     jsonlite (>= 1.8.7),
     MetaboAnnotation (>= 1.4.1),
     MsBackendMgf (>= 1.8.0),
     MsCoreUtils (>= 1.12.0),
-    parallelly (>= 1.36.0),
-    pbmcapply (>= 1.5.1),
+    progressr (>= 0.13.0),
     R.utils (>= 2.12.2),
     rotl (>= 3.1.0),
     Spectra (>= 1.10.1),
