--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,8 +15,6 @@ BugReports: https://github.com/taxonomicallyinformedannotation/tima-r/issues
 Depends:
     R (>= 4.3.0)
 Imports:
-    BiocParallel (>= 1.34.2),
-    CompoundDb (>= 1.4.0),
     crayon (>= 1.5.2),
     docopt (>= 0.7.1),
     dplyr (>= 1.1.2),
@@ -25,9 +23,8 @@ Imports:
     future.apply (>= 1.11.0),
     igraph (>= 1.5.0.1),
     jsonlite (>= 1.8.7),
-    MetaboAnnotation (>= 1.4.1),
     MsBackendMgf (>= 1.8.0),
-    MsCoreUtils (>= 1.12.0),
+    msentropy (>= 0.1.3),
     progressr (>= 0.13.0),
     R.utils (>= 2.12.2),
     rotl (>= 3.1.0),
