--- a/inst/params/default/create_edges_spectra.yaml
+++ b/inst/params/default/create_edges_spectra.yaml
@@ -1,6 +1,8 @@
 ---
 #' Annotations related parameters.
 annotations:
+  #' MS2 annotation related parameters.
+  ms2:
     #' Thresholds
     thresholds:
       #' Similarity threhsold. FLOAT
