--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -73,6 +73,7 @@ Collate:
     'annotate_masses.R'
     'import_spectra.R'
     'annotate_spectra.R'
+    'calculate_entropy.R'
     'clean_bio.R'
     'clean_collapse.R'
     'clean_chemo.R'
@@ -80,7 +81,6 @@ Collate:
     'create_adducts_neg.R'
     'create_adducts_pos.R'
     'create_components.R'
-    'create_edges_progress.R'
     'create_edges_parallel.R'
     'keep_peaks.R'
     'sanitize_spectra.R'
