--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(annotate_masses)
 export(annotate_spectra)
+export(calculate_entropy)
 export(clean_bio)
 export(clean_chemo)
 export(clean_collapse)
@@ -11,7 +12,6 @@ export(create_adducts_pos)
 export(create_components)
 export(create_dir)
 export(create_edges_parallel)
-export(create_edges_progress)
 export(create_edges_spectra)
 export(decorate_bio)
 export(decorate_chemo)
