--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,7 +11,7 @@ export(create_adducts_neg)
 export(create_adducts_pos)
 export(create_components)
 export(create_dir)
-export(create_edges_parallel)
+export(create_edges)
 export(create_edges_spectra)
 export(decorate_bio)
 export(decorate_chemo)
