--- a/inst/params/default/prepare_features_tables.yaml
+++ b/inst/params/default/prepare_features_tables.yaml
@@ -12,10 +12,10 @@ files:
 #' Names of the different variables in the input files.
 names:
   #' Name of "feature IDs" variable in the input. STRING
-  features: "row ID"
+  features: row ID
 
   #' Name of "precursor m/z" variable in the input. STRING
-  precursor: "row m/z"
+  precursor: row m/z
 
   #' Name of "retention time" variable in the input. STRING
-  rt: "row retention time"
+  rt: row retention time
