--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,7 @@ export(export_spectra_2)
 export(extract_spectra)
 export(fake_annotations_columns)
 export(fake_sop_columns)
+export(filter_annotations)
 export(get_example_sirius)
 export(get_file)
 export(get_gnps_tables)
@@ -50,6 +51,7 @@ export(prepare_features_components)
 export(prepare_features_edges)
 export(prepare_features_tables)
 export(prepare_libraries_adducts)
+export(prepare_libraries_rt)
 export(prepare_libraries_sop_closed)
 export(prepare_libraries_sop_ecmdb)
 export(prepare_libraries_sop_lotus)
