change default params for rt library

--- a/inst/params/default/prepare_libraries_rt.yaml
+++ b/inst/params/default/prepare_libraries_rt.yaml
@@ -8,12 +8,10 @@ files:
       #' Experimental libraries
       exp:
         #' List of negative experimental spectral libraries. STRING
-        neg:
-          - data/interim/libraries/spectra/exp/internal_neg.rds
+        neg: []
 
         #' List of positive experimental spectral libraries. STRING
-        pos:
-          - data/interim/libraries/spectra/exp/internal_pos.rds
+        pos: []
 
       #' In silico libraries
       is:
