--- a/inst/params/default/annotate_masses.yaml
+++ b/inst/params/default/annotate_masses.yaml
@@ -16,6 +16,12 @@ files:
   libraries:
     #' Adducts libraries.
     adducts:
+      #' Negative adducts. STRING
+      neg: data/interim/libraries/adducts/neg.tsv.gz
+
+      #' Positive adducts. STRING
+      pos: data/interim/libraries/adducts/pos.tsv.gz
+
       #' Prepared adducts library. STRING
       prepared: library
 
