See https://github.com/oxsecurity/megalinter/issues/2849

--- a/.github/linters/.mega-linter.yml
+++ b/.github/linters/.mega-linter.yml
@@ -18,4 +18,4 @@ PRE_COMMANDS:
     cwd: "root"
 REPOSITORY_DEVSKIM_PRE_COMMANDS:
   - command:  git config --global --add safe.directory /github/workspace/.git
-    cwd: "root"
+    cwd: "workspace"
