Adding parameter to remove compounds names

--- a/inst/params/default/weight_annotations.yaml
+++ b/inst/params/default/weight_annotations.yaml
@@ -170,6 +170,9 @@ weights:
 
 #' Options.
 options:
+  #' Report compounds names. Can be very large. BOOLEAN
+  compounds_names: no
+  
   #' Do not use it. BOOLEAN
   force: no
 
