--- a/.github/linters/.mega-linter.yml
+++ b/.github/linters/.mega-linter.yml
@@ -5,6 +5,7 @@ DISABLE_ERRORS_LINTERS:
   - MARKDOWN_MARKDOWN_LINK_CHECK
   - R_LINTR
   - REPOSITORY_CHECKOV
+  - REPOSITORY_DEVSKIM
   - REPOSITORY_GITLEAKS
   - REPOSITORY_KICS
   - REPOSITORY_TRIVY
@@ -16,6 +17,3 @@ MARKDOWN_MARKDOWN_LINK_CHECK_DISABLE_ERRORS: true
 PRE_COMMANDS:
   - command: R --slave -e 'install.packages(c("lintr"))'
     cwd: "root"
-REPOSITORY_DEVSKIM_PRE_COMMANDS:
-  - command:  git config --global --add safe.directory /github/workspace/.git
-    cwd: "workspace"
