--- a/inst/params/default/prepare_libraries_sop_merged.yaml
+++ b/inst/params/default/prepare_libraries_sop_merged.yaml
@@ -10,6 +10,7 @@ files:
         - data/interim/libraries/sop/closed_prepared.tsv.gz
         - data/interim/libraries/sop/ecmdb_prepared.tsv.gz
         - data/interim/libraries/sop/lotus_prepared.tsv.gz
+        - data/interim/libraries/sop/rt_prepared.tsv.gz
 
       #' Merged structure organism pairs library.
       merged:
