--- a/inst/params/default/annotate_spectra.yaml
+++ b/inst/params/default/annotate_spectra.yaml
@@ -1,14 +1,14 @@
 ---
 #' Annotations related parameters.
 annotations:
-  #' MS2 annotation related parameters.
-  ms2:
-    #' Perform approximative matching without precursor matching? BOOLEAN
-    approx: no
+  #' Perform approximative matching without precursor matching? BOOLEAN
+  ms2approx: no
 
-    #' Thresholds
-    thresholds:
-      #' Similarity threhsold. FLOAT
+  #' Thresholds related parameters.
+  thresholds:
+    #' MS2 annotation related parameters.
+    ms2:
+      #' For similarity. FLOAT
       similarity: 0.0
 
 #' Files.
@@ -52,12 +52,12 @@ files:
 
 #' MS related parameters.
 ms:
-  #' Intensity related parameters.
-  intensity:
-    #' Thresholds related parameters.
-    thresholds:
+  #' Thresholds related parameters.
+  thresholds:
+    #' MS2 related parameters.
+    ms2:
       #' Intensity threshold for MS2. INTEGER
-      ms2: 5
+      intensity: 5
 
   #' Polarity used. Must be "pos" or "neg". STRING
   polarity: pos
