Refactoring adducts, clusters and neutral losses

--- a/inst/params/default/params.yaml
+++ b/inst/params/default/params.yaml
@@ -235,14 +235,8 @@ ms:
       - "[1M+(Na)1-(H)2]1-"
       - "[1M+(Cl)1]1-"
       - "[1M+(K)1-(H)2]1-"
-      - "[1M+(FA)1-(H)1]1-"
-      - "[1M+(Hac)1-(H)1]1-"
-      - "[1M+(Na)1(FA)1-(H)2]1-"
       - "[1M+(Br)1]1-"
-      - "[1M+(TFA)1-(H)1]1-"
       - "[2M-(H)1]1-"
-      - "[2M+(FA)1-(H)1]1-"
-      - "[2M+(Hac)1-(H)1]1-"
       - "[3M-(H)1]1-"
 
     #' List of adducts to be used in positive. STRING
@@ -252,40 +246,45 @@ ms:
       - "[1M+(H)1(Na)2]3+"
       - "[1M+(Na)3]3+"
       - "[1M+(H)2]2+"
-      - "[1M+(H)2(NH3)1]2+"
       - "[1M+(H)1(Na)1]2+"
       - "[1M+(Mg)1]2+"
       - "[1M+(H)1(K)1]2+"
       - "[1M+(Ca)1]2+"
-      - "[1M+(H)2(ACN)1]2+"
       - "[1M+(Na)2]2+"
       - "[1M+(Fe)1]2+"
-      - "[1M+(H)2(ACN)2]2+"
-      - "[1M+(H)2(ACN)3]2+"
       - "[1M+(H)1]1+"
-      - "[1M+(H)1(NH3)1]1+"
       - "[1M+(Na)1]1+"
-      - "[1M+(Mg)1-(H)1]1+"
-      - "[1M+(H)1(CH3OH)1]1+"
       - "[1M+(K)1]1+"
-      - "[1M+(Ca)1-(H)1]1+"
-      - "[1M+(H)1(ACN)1]1+"
-      - "[1M+(Na)2-(H)1]1+"
-      - "[1M+(H)1(C2H7N)1]1+"
-      - "[1M+(Fe)1-(H)1]1+"
-      - "[1M+(Na)1(ACN)1]1+"
-      - "[1M+(K)2-(H)1]1+"
-      - "[1M+(H)1(DMSO)1]1+"
-      - "[1M+(H)1(ACN)2]1+"
+      - "[1M+(Cu)1]1+"
       - "[2M+(Mg)1]2+"
       - "[2M+(Ca)1]2+"
       - "[2M+(Fe)1]2+"
       - "[2M+(H)1]1+"
-      - "[2M+(H)1(NH3)1]1+"
       - "[2M+(Na)1]1+"
       - "[2M+(K)1]1+"
-      - "[2M+(H)1(ACN)1]1+"
-      - "[2M+(Na)1(ACN)1]1+"
+
+  #' List of clusters to be used.
+  clusters:
+    #' List of clusters to be used in negative. STRING
+    neg:
+      - "H2O (water)"
+      - "CH2O2 (formic)"
+      - "NaCl (sodium chloride)"
+      - "C2H4O2 (acetic)"
+      - "H2PO4 (phosphoric)"
+      - "C2HF3O2 (tfa)"
+
+    #' List of clusters to be used in positive. STRING
+    pos:
+      - "NH3 (ammonia)"
+      - "H2O (water)"
+      # - "CH4O (methanol)"
+      - "C2H3N (acetonitrile)"
+      # - "C2H7N (ethylamine)"
+      # - "C2H6O (ethanol)"
+      - "NaCl (sodium chloride)"
+      # - "C3H8O (isopropanol)"
+      # - "C2H6OS (dmso)"
 
   #' Thresholds related parameters.
   thresholds:
