--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,7 +17,7 @@ Depends:
 Imports:
     crayon (>= 1.5.2),
     docopt (>= 0.7.1),
-    dplyr (>= 1.1.2),
+    dplyr (>= 1.1.3),
     httr (>= 1.4.7),
     igraph (>= 1.5.1),
     jsonlite (>= 1.8.7),
@@ -75,6 +75,7 @@ Collate:
     'clean_bio.R'
     'clean_collapse.R'
     'clean_chemo.R'
+    'columns_model.R'
     'complement_metadata_structures.R'
     'create_adducts_neg.R'
     'create_adducts_pos.R'
@@ -107,6 +108,7 @@ Collate:
     'harmonize_spectra.R'
     'load_yaml_files.R'
     'log_debug.R'
+    'log_pipe.R'
     'pre_harmonize_names_sirius.R'
     'select_annotations_columns.R'
     'prepare_annotations_gnps.R'
