--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(calculate_entropy)
 export(clean_bio)
 export(clean_chemo)
 export(clean_collapse)
+export(columns_model)
 export(complement_metadata_structures)
 export(create_adducts_neg)
 export(create_adducts_pos)
