--- a/inst/params/default/annotate_masses.yaml
+++ b/inst/params/default/annotate_masses.yaml
@@ -34,8 +34,8 @@ files:
 
         #' Structures libraries.
         structures:
-          #' Structures 2D and 3D. STRING
-          dd_ddd: data/interim/libraries/sop/merged/structures/2D_3D.tsv.gz
+          #' Structures stereo. STRING
+          stereo: data/interim/libraries/sop/merged/structures/stereo.tsv.gz
 
           #' Structures metadata. STRING
           metadata: data/interim/libraries/sop/merged/structures/metadata.tsv.gz
