--- a/inst/params/default/prepare_libraries_spectra.yaml
+++ b/inst/params/default/prepare_libraries_spectra.yaml
@@ -55,14 +55,14 @@ names:
     #' Name of "InChI" in MGF. STRING
     inchi: INCHI
 
-    #' Name of "InChI 2D" in MGF. STRING
-    inchi_2D: ~
+    #' Name of "InChI without stereo" in MGF. STRING
+    inchi_no_stereo: ~
 
     #' Name of "InChIKey" in MGF. STRING
     inchikey: ~
 
-    #' Name of "InChIKey 2D" in MGF. STRING
-    inchikey_2D: ~
+    #' Name of "InChIKey without stereo" in MGF. STRING
+    inchikey_no_stereo: ~
 
     #' Name of "molecular formula" in MGF. STRING
     molecular_formula: ~
@@ -76,8 +76,8 @@ names:
     #' Name of "SMILES" in MGF. STRING
     smiles: SMILES
 
-    #' Name of "SMILES 2D" in MGF. STRING
-    smiles_2D: ~
+    #' Name of "SMILES without stereo" in MGF. STRING
+    smiles_no_stereo: ~
 
     #' Name of "spectrum ID" in MGF. STRING
     spectrum_id: ~
