--- a/inst/params/default/params.yaml
+++ b/inst/params/default/params.yaml
@@ -56,11 +56,19 @@ files:
     filtered:
       - data/interim/annotations/example_annotations_filtered.tsv.gz
 
-    #' List of prepared annotations. STRING
+    #' List of prepared annotations.
     prepared:
-      - data/interim/annotations/example_gnps_prepared.tsv.gz
-      - data/interim/annotations/example_isdb_prepared.tsv.gz
-      - data/interim/annotations/example_sirius_prepared.tsv.gz
+      #' List of prepared canopus annotations. STRING
+      canopus: data/interim/annotations/example_canopus_prepared.tsv.gz
+
+      #' List of prepared formula annotations. STRING
+      formula: data/interim/annotations/example_formula_prepared.tsv.gz
+      
+      #' List of prepared structural annotations. STRING
+      structural:
+        - data/interim/annotations/example_gnps_prepared.tsv.gz
+        - data/interim/annotations/example_isdb_prepared.tsv.gz
+        - data/interim/annotations/example_sirius_prepared.tsv.gz
 
     #' Final results file. STRING
     processed: example_results.tsv
