--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,7 +18,7 @@ Imports:
     crayon (>= 1.5.2),
     docopt (>= 0.7.1),
     dplyr (>= 1.1.3),
-    httr (>= 1.4.7),
+    httr2 (>= 0.2.3),
     igraph (>= 1.5.1),
     jsonlite (>= 1.8.7),
     MsBackendMgf (>= 1.8.0),
