--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,6 +31,7 @@ export(get_example_sirius)
 export(get_file)
 export(get_gnps_tables)
 export(get_last_version_from_zenodo)
+export(get_massbank_spectra)
 export(get_organism_taxonomy_ott)
 export(get_params)
 export(harmonize_names_sirius)
