--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,6 +15,7 @@ BugReports: https://github.com/taxonomicallyinformedannotation/tima-r/issues
 Depends:
     R (>= 4.3.0)
 Imports:
+    AnnotationHub (>= 3.8.0),
     crayon (>= 1.5.2),
     docopt (>= 0.7.1),
     dplyr (>= 1.1.3),
@@ -98,6 +99,7 @@ Collate:
     'get_example_sirius.R'
     'get_gnps_tables.R'
     'get_last_version_from_zenodo.R'
+    'get_massbank_spectra.R'
     'get_organism_taxonomy_ott.R'
     'parse_yaml_paths.R'
     'parse_yaml_params.R'
