--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -25,7 +25,6 @@ Imports:
     MsBackendMgf (>= 1.8.0),
     msentropy (>= 0.1.4),
     pbapply (>= 1.7.2),
-    R.utils (>= 2.12.2),
     rotl (>= 3.1.0),
     Spectra (>= 1.10.2),
     stats,
@@ -45,6 +44,7 @@ Suggests:
     knitr,
     markdown,
     pingr,
+    R.utils,
     rstudioapi,
     shiny,
     shinyWidgets,
