--- a/inst/paths.yaml
+++ b/inst/paths.yaml
@@ -220,4 +220,8 @@ urls:
     pattern:
       pos: isdb_pos.mgf
       neg: isdb_neg.mgf
+  massbank:
+    file: MassBank_NIST.msp
+    url: https://github.com/MassBank/MassBank-data/releases/download
+    version: 2023.09  
 version: 2.9.0
