--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,7 +15,6 @@ BugReports: https://github.com/taxonomicallyinformedannotation/tima-r/issues
 Depends:
     R (>= 4.3.0)
 Imports:
-    AnnotationHub (>= 3.8.0),
     crayon (>= 1.5.2),
     docopt (>= 0.7.1),
     dplyr (>= 1.1.3),
@@ -23,6 +22,7 @@ Imports:
     igraph (>= 1.5.1),
     jsonlite (>= 1.8.7),
     MsBackendMgf (>= 1.8.0),
+    MsBackendMsp (>= 1.4.0),
     msentropy (>= 0.1.4),
     pbapply (>= 1.7.2),
     rotl (>= 3.1.0),
@@ -37,7 +37,6 @@ Suggests:
     BiocManager,
     bs4Dash,
     clustermq,
-    CompoundDb,
     DT,
     future,
     gt,
