--- a/.github/workflows/external-use.yaml
+++ b/.github/workflows/external-use.yaml
@@ -38,6 +38,6 @@ jobs:
           Rscript inst/scripts/install.R
       - name: Run tests
         run: |
-          Rscript inst/scripts/tima_mini.R
+          Rscript inst/scripts/tima_full.R
           # Check if targets works correctly
-          Rscript inst/scripts/tima_mini.R
+          Rscript inst/scripts/tima_full.R
