--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -29,6 +29,7 @@ Imports:
     Spectra (>= 1.10.2),
     stats,
     stringi (>= 1.7.12),
+    tarchetypes (>= 0.7.8),
     targets (>= 1.3.0),
     tidytable (>= 0.10.1),
     tidyfst (>= 1.7.7),
