--- a/NAMESPACE
+++ b/NAMESPACE
@@ -38,6 +38,7 @@ export(harmonize_names_sirius)
 export(harmonize_spectra)
 export(import_spectra)
 export(keep_peaks)
+export(label_mandatory)
 export(load_yaml_files)
 export(log_debug)
 export(log_pipe)
