--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,9 +15,12 @@ BugReports: https://github.com/taxonomicallyinformedannotation/tima-r/issues
 Depends:
     R (>= 4.3.0)
 Imports:
+    bs4Dash (>= 2.3.0),
     crayon (>= 1.5.2),
     docopt (>= 0.7.1),
     dplyr (>= 1.1.3),
+    DT (>= 0.29),
+    gt (>= 0.9.0),
     httr2 (>= 0.2.3),
     igraph (>= 1.5.1),
     jsonlite (>= 1.8.7),
@@ -25,11 +28,14 @@ Imports:
     MsBackendMsp (>= 1.4.0),
     msentropy (>= 0.1.4),
     pbapply (>= 1.7.2),
+    pingr (>= 2.0.2),
     rotl (>= 3.1.0),
     shiny (>= 1.7.5),
+    shinybusy (>= 0.3.1),
     shinyhelper (>= 0.3.2),
     shinyjs (>= 2.1.0),
     shinyvalidate (>= 0.1.2),
+    shinyWidgets (>= 0.8.0),
     Spectra (>= 1.10.2),
     stats,
     stringi (>= 1.7.12),
@@ -37,20 +43,15 @@ Imports:
     tidytable (>= 0.10.1),
     tidyfst (>= 1.7.7),
     utils,
+    visNetwork (>= 2.1.2),
     yaml (>= 2.3.7)
 Suggests: 
     BiocManager,
-    bs4Dash,
-    DT,
-    gt,
     knitr,
     R.utils,
-    shinybusy,
     shinytest2,
-    shinyWidgets,
     spelling,
-    testthat,
-    visNetwork
+    testthat
 Config/testthat/edition: 3
 Encoding: UTF-8
 LazyData: true
